# nglcobdai-utils

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-document.yml  pytest.yml
doc/: how_to_development.md  how_to_setup_slack_app.md
docs/: .buildinfo  Development.html  Makefile  objects.inv  py-modindex.html
docs/Installation/: Slack.html
docs/Quickstart/: Quickstart.html  Settings.html
docs/_modules/: index.html
docs/_sources/API/: API.rst.txt  nglcobdai_utils.log.rst.txt  nglcobdai_utils.slack.rst.txt
docs/_sources/Quickstart/: Logger.rst.txt
docs/html/: .buildinfo  search.html  searchindex.js
docs/html/API/: nglcobdai_utils.log.html  nglcobdai_utils.slack.html
docs/html/Installation/: Installation.html
docs/html/Quickstart/: Logger.html  Slack.html
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
docs/source/API/: API.rst  nglcobdai_utils.base.rst  nglcobdai_utils.config.rst  nglcobdai_utils.messages.rst
nglcobdai_utils/: __init__.py  config.py  log.py  slack.py
sample/: messages.test.ini  messages.test.nosection.ini
src/: __init__.py  __main__.py
src/nglcobdai_utils/: __init__.py
tests/: test_logger.py  test_message.py  test_messenger.py  test_slack.py  test_string_logger.py
tests/base/: test_template_error.py
tests/config/: test_settings.py
tests/log/: test_console_logger.py  test_file_logger.py  test_logger.py  test_rotating_file_logger.py  test_set_logger.py  test_timed_rotating_file_logger.py
tests/messages/: test_messenger.py
tests/slack/: test_slack.py
(+20 files in other folders)
