[tool.poetry]
name = "nglcobdai-utils"
version = "0.1.0"
description = ""
authors = ["Kodai YAMASHITA <nglcobdai@gmail.com>"]
readme = "README.md"
packages = [
    { include = "nglcobdai_utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
pytz = "^2024.1"
pyyaml = "^6.0.2"
slack-sdk = "^3.32.0"

[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^8.3.2"
sphinx = "^8.0.2"
furo = "^2024.8.6"
myst-parser = "^4.0.0"
sphinx-rtd-theme = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
